<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.MainActivity2" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/mNome"
        android:title="@string/nome"/>
    <item
        android:id="@+id/mNomeOut"
        android:title="@string/nomeOut"/>
    <item
        android:id="@+id/mSite"
        android:title="@string/site"/>
    <item
        android:id="@+id/mSiteOut"
        android:title="@string/siteOut"/>
    <item
        android:id="@+id/mEndereco"
        android:title="@string/endereco"/>
    <item
        android:id="@+id/mEnderecoOut"
        android:title="@string/enderecoOut"/>
    <item
        android:id="@+id/mCidade"
        android:title="@string/cidade"/>
    <item
        android:id="@+id/mCidadeOut"
        android:title="@string/cidadeOut"/>
    <item
        android:id="@+id/mEstado"
        android:title="@string/estado"/>
    <item
        android:id="@+id/mEstadoOut"
        android:title="@string/estadoOut"/>
    <item
        android:id="@+id/mPais"
        android:title="@string/pais"/>
    <item
        android:id="@+id/mPaisOut"
        android:title="@string/paisOut"/>
    <item
        android:id="@+id/mButtonRetornar"
        android:title="@string/retornar"/>

</menu>