<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:stretchColumns="1" >

    <TableRow>

        <TextView
            android:gravity="left"
            android:paddingLeft="1dip"
            android:text="@string/nome" />

        <TextView
            android:gravity="right"
            android:paddingRight="1dip"
            android:text="@string/nomeOut" />
    </TableRow>

    <View
        android:layout_height="2dip"
        android:background="#FF909090" />

    <TableRow>

        <TextView
            android:gravity="left"
            android:text="@string/site" />

        <TextView
            android:gravity="right"
            android:text="@string/siteOut" />
    </TableRow>

    <View
        android:layout_height="2dip"
        android:background="#FF909090" />

    <TableRow>

        <TextView
            android:background="#00ff00"
            android:padding="5dip"
            android:text="@string/cidade"
            android:textColor="#0000ff" />

        <TextView
            android:background="#00FFFF"
            android:padding="5dip"
            android:text="@string/cidadeOut"
            android:textColor="#000000" />
    </TableRow>

    <TableRow>

        <TextView
            android:background="#FFA500"
            android:padding="5dip"
            android:text="@string/estado"
            android:textColor="#000000" />

        <TextView
            android:background="#F08080"
            android:padding="5dip"
            android:text="@string/estadoOut"
            android:textColor="#000000" />
    </TableRow>

    <TableRow>

        <TextView
            android:background="#ADFF2F"
            android:padding="5dip"
            android:text="@string/pais"
            android:textColor="#000000" />

        <TextView
            android:background="#87CEEB"
            android:padding="5dip"
            android:text="@string/paisOut"
            android:textColor="#000000" />
    </TableRow>
    
    <Button
        android:id="@+id/mButtonRetornar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mPaisOut"
        android:text="@string/retornar"
        android:gravity="center" />

</TableLayout>